2001-09-27  MUELLER Wolfgang  <muellerw@cui.unige.ch>

	* libMRML/cc/CSessionManager.cc(query): 
	* libMRML/cc/CAlgorithmCollection.cc (CAlgorithmCollection): 
	Moving calls to my_throw in a way that they are USED =>
	this makes compilers with good exception handling necessary.

2001-05-31  Wolfgang Mueller  <Wolfgang.Mueller@cui.unige.ch>

	* configure.in: changeing package version number

2001-09-10  MUELLER Wolfgang  <muellerw@cui.unige.ch>

	* libMRML/cc/CQMultiple.cc: CQMThread gets 
	an additional attribute: mWeight. mWeight
	describes which weight the result obtained
	by this thread should receive. It has to be
	taken care of manually, and it does not cause
	any thing to happen automatically.
	add CQMThread::getWeight function
	(fastQuery): using CQMThread::getWeight() for
	weighting result correctly.

2001-07-30  MUELLER Wolfgang  <muellerw@cui.unige.ch>

	* libGIFTAcInvertedFile/cc/CAcIFFileSystem.cc: 
	* configure.in: add option --disable-foreign-urls and compiler
	define IGNORE_UNKNOWN_URLS for disabling people's use of URLs 
	that are not part of the collection queried.

	* scripts/perl/gift-url-to-fts.pre-pl (convertURLToFeatureFile): 
	adding a line that logs the external URL along with the time and
	the thumbnail file, as well as the name of the feature file generated

2001-05-08  MUELLER Wolfgang  <muellerw@cui.unige.ch>

	* libMRML/include/CSessionManager.h (CSessionManager): 
	* libMRML/cc/CSessionManager.cc (CSessionManager): 
	adding a newSession function, that creates a session with a           given ID in case of a user requesting a non-exsistent 
	session.

2001-05-07  MUELLER Wolfgang  <muellerw@cui.unige.ch>

	* libMRML/cc/CSessionManager.cc: Removed my_throw
	in case of unknown session for query

2001-04-21  MUELLER Wolfgang  <muellerw@cui.unige.ch>

	* FeatureExtraction/extract_block_features.c(init_feature_variables): 
	Applied David Squire's bug fix for wrong features
	(int) becomes rint()
