@@ -1,3 +1,8 @@
+2001-10-11  MUELLER Wolfgang  <muellerw@cui.unige.ch>
+
+	* libMRML/cc/CSessionManager.cc: Returning error tag
+	if unknown session
+
 2001-09-27  MUELLER Wolfgang  <muellerw@cui.unige.ch>
 
 	* libMRML/cc/CSessionManager.cc(query): 
